--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -9,7 +9,7 @@ body {
     justify-content: space-between;
     padding: 0px 10px;
     border-bottom: 1px solid rgba(85, 85, 85, 0.333);
-    background: rgb(45, 50, 60);
+    background: rgb(47, 50, 72);
     position: sticky;
     top: 0px;
     z-index: 99;
@@ -26,7 +26,7 @@ button{
     cursor: pointer;
     font-size: 20px;
     margin-left: 10px;
-    color: #757575;
+    color: rgb(158, 162, 189);
 }
 .menu-botoes{
     border-bottom: 1px solid rgba(85, 85, 85, 0.333);
@@ -35,11 +35,11 @@ button{
     align-items: center;
 }
 .active{
-    color: #3498db;
+    color: rgb(0, 250, 255);
 }
 h1{
     font-size: 40px;
-    color: #757575;
+    color: rgb(158, 162, 189);
 }
 .tela{
     margin-top: 20px;
@@ -51,11 +51,11 @@ h1{
     align-items: center;
 }
 .user-profile h3{
-    color: #757575;
+    color: rgb(158, 162, 189);
     font-size: 20px;
 }
 .user-profile h4{
-    color: #3498db;
+    color: rgb(0, 250, 255);
     font-weight: 700;
 }
 .user-profile{
@@ -70,7 +70,7 @@ h1{
     align-items: center;
     width: 50px;
     height: 50px;
-    background-color: #3498db;
+    background-color: rgb(0, 250, 255);
     border-radius: 50%;
     margin-left: 20px;
   }
